--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/my-unity-games.loader.js";
       var config = {
-        dataUrl: buildUrl + "/my-unity-games.data.br",
-        frameworkUrl: buildUrl + "/my-unity-games.framework.js.br",
-        codeUrl: buildUrl + "/my-unity-games.wasm.br",
+        dataUrl: buildUrl + "/my-unity-games.data.unityweb",
+        frameworkUrl: buildUrl + "/my-unity-games.framework.js.unityweb",
+        codeUrl: buildUrl + "/my-unity-games.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "pong",
